Improve Error response, Refactor code
